# sermo-rs

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
nix/: sermo.nix
