[workspace]
resolver = "2"
members = [
    "packages/core",
    "packages/ui",
    "packages/web",
    "packages/desktop",
    "packages/mobile",
]

[workspace.dependencies]
dioxus = { version = "0.7.2" }

# workspace
project-core = { path = "packages/core" }
ui = { path = "packages/ui" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
